Jwt update